# uw_dnmr

./: .flake8  .gitignore  CHANGELOG.rst  LICENSE.txt  PROJECT_INTRO.rst  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: test.yml
.github/workflows/: test.yml
dev_notes/: README.txt  devlog.md  freezing.txt  next_release.txt  release_checklist.txt  version_locations.txt
docs/source/: acknowledgements.rst  adjust_plot.rst  calc_type.rst  ch1.rst  ch2.rst  changelog.rst  conf.py  dnmr_menu.rst  features.rst  feedback.rst  index.rst  install.rst  intro.rst  multiplet.rst  qm.rst  todo.rst  user_guide.rst
src/qt_nmr/: __main__.py  app.py
src/qt_nmr.dist-info/: METADATA
src/qt_nmr/controller/: controller.py
src/qt_nmr/model/: model.py
src/qt_nmr/view/widgets/: buttons.py  toolbars.py
src/uw_dnmr/: __main__.py  app.py
src/uw_dnmr.dist-info/: METADATA
src/uw_dnmr/controller/: adapter.py  controller.py
src/uw_dnmr/resources/: uw_dnmr.icns
src/uw_dnmr/view/: mainwindow.py  settings.py  ui.py
src/uw_dnmr/view/widgets/: entry.py  toolbars.py
temp/tests/: README.rst
temp/uw_dnmr/GUI/: toolbars.py  view.py  widgets.py
tests/: test_app.py  test_buttons.py  test_integration.py  test_model.py  test_toolbars.py  test_view.py
tests/accepted_data/: dnmr_dnmr_ab.json  dnmr_dnmr_two_singlets.json  multiplet_1stOrd.json  multiplet_AABB.json  multiplet_AAXX.json  multiplet_AB.json  multiplet_AB2.json  multiplet_ABX.json  multiplet_ABX3.json  nspin_2.json  nspin_3.json  nspin_4.json  nspin_5.json  nspin_6.json  nspin_7.json  nspin_8.json  utils.py
utils/: utils.py
uw_dnmr/: windnmr_defaults.py
uw_dnmr/GUI/: toolbars.py  view.py
uw_dnmr/controller/: controller.py  minicontroller.py
uw_dnmr/model/: minimodel.py  nmrmath.py
