[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "qt-dnmr"
bundle = "com.example"
version = "0.1.0"
url = "https://github.com/sametz/qt_nmr"
license = "MIT license"
author = 'Geoffrey Sametz'
author_email = "sametz@udel.edu"

[tool.briefcase.app.qt_nmr]
formal_name = "qt-dnmr"
description = "Simulation of First-Order, Second-Order, and Dynamic NMR spectra"
icon = "src/qt_nmr/resources/qt_nmr"
sources = ['src/qt_nmr']
requires = [
    'pyside2==5.13.0',
    'pyqtgraph>=0.11.0rc0',
    'nmrsim==0.4.0rc1'
]


[tool.briefcase.app.qt_nmr.macOS]
requires = []

[tool.briefcase.app.qt_nmr.linux]
requires = []

[tool.briefcase.app.qt_nmr.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.qt_nmr.iOS]
requires = []

[tool.briefcase.app.qt_nmr.android]
requires = []
