[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "uw-dnmr"
bundle = "com.example"
version = "0.3.0"
url = "https://github.com/sametz/uw_dnmr"
license = "MIT license"
author = 'Geoffrey M. Sametz'
author_email = "sametz@udel.edu"

[tool.briefcase.app.uw_dnmr]
formal_name = "uw-dnmr"
description = "Simulation of First-Order, Second-Order, and Dynamic NMR spectra"
icon = "src/uw_dnmr/resources/uw_dnmr"
sources = ['src/uw_dnmr']
requires = [
    'pyside2==5.13.0',
    'pyqtgraph>=0.11.0rc0',
    'nmrsim==0.4.0rc1'
]


[tool.briefcase.app.uw_dnmr.macOS]
requires = []

[tool.briefcase.app.uw_dnmr.linux]
requires = []

[tool.briefcase.app.uw_dnmr.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.uw_dnmr.iOS]
requires = []

[tool.briefcase.app.uw_dnmr.android]
requires = []
